bruh getFirst() is since java21